Coursera_4/Week3/Week2_Programming Excercise_SortingAtScale/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\matio\Desktop\Week2_Programming Excercise_SortingAtScale
-d
C:\Users\matio\Desktop\Week2_Programming Excercise_SortingAtScale\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\matio\Desktop\Week2_Programming Excercise_SortingAtScale\MagnitudeComparator.java
<---- end of javadoc command ---->
Loading source file C:\Users\matio\Desktop\Week2_Programming Excercise_SortingAtScale\MagnitudeComparator.java...
C:\Users\matio\Desktop\Week2_Programming Excercise_SortingAtScale\MagnitudeComparator.java:12: error: <identifier> expected
        qe1.
            ^
C:\Users\matio\Desktop\Week2_Programming Excercise_SortingAtScale\MagnitudeComparator.java:12: error: not a statement
        qe1.
           ^
2 errors
